# MLOPS

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
data/processed/: batch_1.csv  batch_2.csv  train.csv  train_updated.csv
models/: model.joblib
src/student_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/student_mlops/api/: main.py
src/student_mlops/data/: ingest.py  preprocess.py  split.py
src/student_mlops/models/: evaluate.py  train.py
src/student_mlops/pipeline/: retrain.py
